<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:padding="@dimen/_16sdp">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_pencil" />

        <TextView
            style="@style/Text.H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_pdf"
            android:textColor="@color/moselle_green" />
    </LinearLayout>


    <EditText
        android:id="@+id/etPdfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        android:contentDescription="@string/et_description"
        android:fontFamily="@font/lusitana_regular"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/etPdfName"
        app:layout_constraintTop_toBottomOf="@+id/etPdfName">

        <TextView
            android:id="@+id/btnCancel"
            style="@style/Text.H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:text="@string/cancel"
            android:textColor="@color/moselle_green" />

        <TextView
            android:id="@+id/btnSave"
            style="@style/Text.H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/moselle_green" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>