<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/quotes_fragment_scene"
    tools:context=".ui.quotes.QuotesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:splitMotionEvents="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_quote_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clQuotesDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_book_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.7"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_detail_book"
            app:imageZoom="1"
            app:layout_constraintBottom_toBottomOf="@id/iv_book_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_gradient"
            app:layout_constraintBottom_toBottomOf="@id/iv_book_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_110sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:backgroundTint="@color/oyster_island"
                app:cardCornerRadius="@dimen/_4sdp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_author"
                            style="@style/Text.H3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingHorizontal="@dimen/_16sdp"
                            android:text="@string/anonymous"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <!--Todo: Add Quote Detail List Here-->
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bg_book_picture"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                app:cardBackgroundColor="@color/méi_hēi_coal"
                app:cardCornerRadius="@dimen/_4sdp">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/Text.H2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:text="@string/anonymous"
                    android:textColor="@color/highlight" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_book_picture"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:contentDescription="@string/book_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/movingImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        tools:ignore="ContentDescription,MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/moselle_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEmptyQuoteBooks"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_270sdp"
            android:contentDescription="@string/empty_favorite_books_icon"
            android:src="@drawable/ic_empty_quote_books"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tvInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInfo"
            style="@style/Text.H5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/empty_quote_books_info"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivEmptyQuoteBooks" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>